--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
 		<meta charset="UTF-8" />
 		<title>Chatbot</title>
 	</head>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 	<body>
 		<div class="container">
 			<div class="chatbox">
