--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 						<div></div>
 					</div>
 					<div class="chatbox__footer">
-						<input type="text" placeholder="Write a message..." />
+						<input id="text_input" type="text" placeholder="Write a message..." />
 						<button class="chatbox__send--footer send__button">
 							Send
 						</button>
